# flv-dump

./: .gitignore  Cargo.toml  LICENSE  README.md
resources/: test.flv
src/: main.rs  reader.rs
